detect implicit orm.xml mapping when single in JAR
Signed-off-by: Michal Vavřík <dev@michalvavrik.net>